--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-cloudflare": "^1.0.0-next.2",
+		"@sveltejs/adapter-netlify": "^1.0.0-next.35",
 		"@sveltejs/adapter-static": "^1.0.0-next.21",
 		"@sveltejs/kit": "^1.0.0-next.119",
 		"@typescript-eslint/eslint-plugin": "^4.19.0",
@@ -34,6 +35,7 @@
 		"@sveltejs/adapter-cloudflare-workers": "^1.0.0-next.25",
 		"cookie": "^0.4.1",
 		"dotenv": "^9.0.0",
-		"magic-sdk": "^4.3.0"
+		"magic-sdk": "^4.3.0",
+		"stream": "^0.0.2"
 	}
 }
